--- a/css/base.css
+++ b/css/base.css
@@ -64,7 +64,16 @@ article h2 {
     margin: 4px;
 }
 
+aside { 
+    background-color: #000;
+    float: right; 
+    margin-left: 5%; 
+    margin-bottom: 10px; 
+    width: 45%;    
+}
+
 footer {
+    clear: right; 
     font-size: 12px;
     padding: 0 10px 0 10px;   
 }
