--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,7 @@ body {
     font-family: georgia, serif; 
     font-size: 16px;
     line-height: 24px;
+    background-color: #00BFFF;
 }
 
 p {
@@ -15,23 +16,28 @@ p {
 }
 
 header {
-    background-color: #000000; 
+    background-color: #000000;
     color: #ffffff; 
-    height: 40px; 
+    height: 60px; 
+    
 }
 
 header h1 {
-    float: left;
+    text-align: center;
     font-family: arial, sans-serif; 
-    font-size: 22px;
+    font-size: 50px;
     font-weight: 500;
     padding: 10px;
-}
 
-header nav {
-    float: left;
-    margin-top: 12px;
-    font-family: arial, sans-serif;  
+}
+    
+nav { 
+    color: #000000;
+    font-family: sans-serif;
+    font-size: 20px;
+    text-align: center; 
+    margin-top: 10px; 
+    word-spacing: 20px;
 }
 
 header a {
@@ -55,7 +61,9 @@ article {
 article h1 {
     font-size: 36px;
     line-height: 44px;
-    margin-top: 4px;
+    margin-top: 10px;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
 article h2 {
@@ -64,16 +72,24 @@ article h2 {
     margin: 4px;
 }
 
-aside { 
-    background-color: #000;
-    float: right; 
-    margin-left: 5%; 
-    margin-bottom: 10px; 
-    width: 45%;    
+article p {
+    text-align: center;
+    font-size: 20px;
+    padding: 5px; 
 }
 
-footer {
-    clear: right; 
-    font-size: 12px;
-    padding: 0 10px 0 10px;   
+img.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
 }
+
+
+footer {
+    clear: both;
+    text-align: center;
+    font-size: 14px; 
+    line-height: 30
+}
+
