--- a/css/base.css
+++ b/css/base.css
@@ -120,20 +120,12 @@ img.center {
     margin-top: 15px;
 }
 
-.video-container {
-	position:relative;
-	padding-bottom:56.25%;
-	padding-top:30px;
-	height:0;
-	overflow:hidden;
+#work h2 {
+    margin-bottom: 7px;
 }
 
-.video-container iframe, .video-container object, .video-container embed {
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
+#work h3 {
+    margin-top: 10px;
 }
 
 footer {
@@ -142,6 +134,9 @@ footer {
     font-size: 14px; 
     line-height: 30
 }
+
+#keys {
+    
 
 @media screen and (max-width: 600px) {
 
@@ -159,9 +154,6 @@ footer {
         width: 1000%
     }
 
-/***I cant make picture widths 100% without them becoming giant again and disregarding the size I set it too
-- why are my videos huge?
-- how should i prelude into my articles?
+/***
 - how do i make the TARYN BRAY go down more without messing up the black background?
-- format my about page
 - in @media screen everything messes up and i dont know how to format that either
